Добавил куки, добавил слайдер

--- a/src/pug/sections/_advertisement.pug
+++ b/src/pug/sections/_advertisement.pug
@@ -3,7 +3,10 @@ section.advertisement
         .advertisement__header
             h2.advertisement__titile Объявления
             span.divider
-
+            .advertisement__buttons.advertisement__buttons--extra
+                .swiper-button-prev.advertisement-button-prev
+                .swiper-pagination.advertisement-pagination
+                .swiper-button-next.advertisement-button-next
         .swiper-wrapper.advertisement__wrapper
             // Slides
             .swiper-slide
@@ -45,6 +48,6 @@ section.advertisement
                             span Сентября
                         p.slider__item-state.slider__item-state--online Онлайн
         .advertisement__buttons
-            .swiper-button-prev
-            .swiper-pagination
-            .swiper-button-next
+            .swiper-button-prev.advertisement-button-prev
+            .swiper-pagination.advertisement-pagination
+            .swiper-button-next.advertisement-button-next
