--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -16,9 +16,20 @@ header.page-header.js-header
                 div#nav
                     ul.page-header__menu-list
                         li.page-header__menu-item
-                            a.js-menu-link(href="#") Вакансии
+                            a.js-menu-link(href="#") Мой профиль
                         li.page-header__menu-item
-                            a.js-menu-link(href="#") Портфолио студентов
+                            a.js-menu-link(href="#") Модерирование
+                        li.page-header__menu-item.page-header__menu--exit
+                            a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
 
         .page-header__login
             button.page-header__login-button Войти на портал
+            .login
+                div.login__navigation
+                    ul.login__navigation-list
+                        li.login__navigation-item
+                            a.js-menu-link(href="#") Мой профиль
+                        li.login__navigation-item
+                            a.js-menu-link(href="#") Модерирование
+                        li.login__navigation-item.login__navigation--exit
+                            a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
