--- a/src/pug/sections/_main.pug
+++ b/src/pug/sections/_main.pug
@@ -5,10 +5,9 @@ main.main
     include ./_classmates
     include ./_announcement
     include ./_services
-
     include ./_faq
-
     include ./_advertisement
     include ./_news
     include ./_banner
     include ./_portfolio-tabs
+    include ./_partners
