--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,8 +7,10 @@
 @import "blocks/btn.scss";
 @import "general/rem-calc";
 @import "blocks/block-content";
+@import "blocks/cookie";
 
 @import "blocks/page-header";
+@import "blocks/login";
 @import "blocks/enter";
 @import "blocks/info";
 @import "blocks/portfolio";
@@ -21,6 +23,7 @@
 @import "blocks/news";
 @import "blocks/banner";
 @import "blocks/portfolio-tabs";
+@import "blocks/partners";
 @import "blocks/footer";
 @import "blocks/social-block";
 
