--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -134,6 +134,10 @@
     display: flex;
     width: 100%;
     height: 21%;
+    @media (min-width: $tablet) {
+      flex-direction: column;
+      align-items: flex-end;
+    }
   }
 }
 
@@ -146,6 +150,10 @@
   }
   .slider__item-descr {
     display: none;
+    @media (min-width: $tablet) {
+      display: block;
+      width: 400px;
+    }
   }
 }
 
@@ -180,6 +188,7 @@
     font-size: 24px;
     line-height: 30px;
     margin: 0 0 23px;
+    max-width: 353px;
   }
 }
 
