--- a/src/scss/general/scaffolding.scss
+++ b/src/scss/general/scaffolding.scss
@@ -21,7 +21,7 @@ body {
   font-weight: 300;
   color: #444444;
   background: $c-grey;
-
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
