--- a/src/scss/general/mixins.scss
+++ b/src/scss/general/mixins.scss
@@ -129,3 +129,12 @@
     width: 100%;
   }
 }
+
+@mixin button-blue {
+  color: #fff;
+  background: #3464E0;
+  border: 1px solid #3464E0;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 13px 28px;
+}
