--- a/src/pug/mixins/_users.pug
+++ b/src/pug/mixins/_users.pug
@@ -1,5 +1,5 @@
-mixin user(username, birthday, img, imgWebp)
-    .classmates__user
+mixin user(username, birthday, img, imgWebp, link)
+    a(href=link).classmates__user
         .classmates__avatar
             picture
                 source(srcset="img/" + imgWebp, type="image/webp")
