--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,8 +1,8 @@
 extends ../layouts/_main.pug
-
 include ./../mixins/_users.pug
 
 block variables
     - const title = 'Студенческий портал - Главная';
 
 block content
+    include ../sections/_main-index
