--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -100,11 +100,11 @@
       position: absolute;
       left: 0;
       top: 0;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 27px 27px 0 0;
-      border-color: #e06363 transparent transparent transparent;
+      width: 27px;
+      height: 31px;
+      border-radius: 4px 0 0 0;
+      background: rgb(224,99,100);
+      background: linear-gradient(135deg, rgba(224,99,100,1) 50%, rgba(255,255,255,0) 50%);
     }
   }
   &--attention {
