Добавил карточки людей, сделал для них миксин, сделал input range для фильтра, сделал чекбоксы и кастомный скролл для списка фильтров

--- a/src/pug/pages/digital-portfolio.pug
+++ b/src/pug/pages/digital-portfolio.pug
@@ -1,5 +1,5 @@
 extends ../layouts/_main.pug
-include ./../mixins/_portfolio-card.pug
+include ./../mixins/_portfolio-cards.pug
 block variables
     - const title = 'Студенческий портал - Цифровое портфолио обучающегося';
 
