--- a/src/scss/blocks/_login.scss
+++ b/src/scss/blocks/_login.scss
@@ -37,7 +37,7 @@
     .page-header--menu-opened & {
       width: 258px;
       left: 74%;
-      top: 1.84%;
+      top: 88px;
       transition: 0.2s;
       animation: none;
       &::after {
