--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
+  margin-bottom: 21px;
   width: 238px;
   background: #ffffff;
   border-radius: 4px;
