начал делать пагинацию, надо закончить фильтрацию

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,4 +1,5 @@
 header.page-header.js-header
+    .overlay#overlay-modal
     .page-header__wrapper
         .page-header__sidebar
             button.page-header__sidebar-toggler
