--- a/src/scss/general/cookie.scss
+++ b/src/scss/general/cookie.scss
@@ -97,7 +97,7 @@
     width: 54px;
     height: 54px;
     display: block;
-    background: url("../img/icons/icons.svg#cookie");
+    background: url("../img/icons/icons.svg#cookie-icon");
   }
 }
 
