--- a/src/scss/blocks/_filter.scss
+++ b/src/scss/blocks/_filter.scss
@@ -5,7 +5,7 @@
 .filter__title {
   @include title-aside;
   span {
-    color: rgb(210,215,224);
+    color: rgb(210, 215, 224);
   }
 }
 
@@ -47,6 +47,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  cursor: pointer;
 }
 
 .filter__checkbox {
@@ -64,7 +65,19 @@
   width: 20px;
   height: 20px;
   background-color: #fff;
-  border: 1px solid #C3CAD6;
+  border: 1px solid #c3cad6;
+  &::before {
+    animation: fadeIn 0.2s ease-in-out;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 //checked
@@ -73,7 +86,7 @@
 }
 
 .filter__checkbox:checked + .filter__checkbox-visible::before {
-  content: '';
+  content: "";
   width: 10px;
   height: 10px;
   top: 4px;
@@ -86,70 +99,66 @@
 //disabled
 
 .filter__checkbox:disabled + .filter__checkbox-visible {
-  border: 1px solid #C3CAD6;
-  background: #C3CAD6;
+  border: 1px solid #c3cad6;
+  background: #c3cad6;
   &::before {
     display: none;
   }
 }
 
-//slider
-.two-range-slider {
+.filter__faculty {
+  @include aside-divider;
+  @include title-aside;
+}
+.filter__select {
+  width: 266px;
+  padding: 9px;
+  border: 1px solid #F1F4F9;
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-bottom: 23px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  color: #C3CAD6;
+  appearance: none;
   position: relative;
-  width: 100%;
-  border-radius: 3px;
-  height: 73px;
-  &__input {
-    position: absolute;
-    left: 0;
-    top: 34px;
-    box-shadow: none;
-    appearance: none;
-    width: 100%;
-    height: 3px;
-    background: #c3cad6;
-    border-radius: 3px;
-    outline: 0;
-    transition: opacity 0.25s ease-in-out;
-
-    &::-webkit-slider-thumb {
-      z-index: 2;
-      position: relative;
-      appearance: none;
-      width: 24px;
-      height: 24px;
-      border-radius: 50%;
-      border: 3px solid #3464e0;
-      background: #fff;
-      cursor: pointer;
-      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
-    }
-  }
-
-  &__output {
-    display: inline-flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    width: 100%;
-  }
+  background: url("../img/icons/icons.svg#vector") no-repeat 95% center;
+  background-size: 11px;
 }
 
+.filter__select > option {
+  color: #444;
+}
 
-.two-range-slider__value {
-  position: absolute;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 11px;
-  line-height: 13px;
-  color: #FFFFFF;
-  background: #3464E0;
+.filter__education {
+  @include aside-divider;
+  @include title-aside;
+  min-height: 176px;
+}
+
+.filter__education-options {
+  border: 1px solid #F1F4F9;
+  box-sizing: border-box;
   border-radius: 4px;
-  padding: 3px 8px;
-  top: 0;
-  &--left {
-    left: 45px;
-  }
-  &--right {
-    left:  225px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 27px;
+}
+
+.filter__education-option {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
+  color: #FFFFFF;
+  display: block;
+  margin: 8px 8px 8px 6px;
+  padding: 2px 9px 2px 36px;
+  background: #C3CAD6;
+  border-radius: 3px;
+}
+
+.filter__salary {
+  @include aside-divider;
+  @include title-aside;
 }
