--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -1,6 +1,6 @@
 section.portfolio
     .portfolio__container
-        h2.portfolio__title Портфолио
+        h2.portfolio__title Цифровой профиль
         .portfolio__wrapper
             .portfolio__progress.gauge(data-width="236" data-value="75")
                 span.gauge__value
