--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,3 +38,20 @@
 @import "blocks/achievements";
 @import "blocks/filter";
 @import "blocks/two-ranged-slider";
+@import "blocks/pagination";
+
+//digital-profile
+
+@import "blocks/profile";
+@import "blocks/activities";
+@import "blocks/extra-info";
+@import "blocks/employments";
+@import "blocks/about";
+@import "blocks/languages";
+@import "blocks/reccomendations";
+@import "blocks/study-work";
+@import "blocks/science-work";
+@import "blocks/outstudy-work";
+@import "blocks/international-work";
+@import "blocks/progress-bar";
+@import "blocks/table";
