--- a/src/scss/general/mixins.scss
+++ b/src/scss/general/mixins.scss
@@ -102,6 +102,7 @@
   text-transform: uppercase;
   @media (min-width: $tablet) {
     font-size: rem-calc(18);
+    text-transform: unset;
   }
 }
 
@@ -109,7 +110,7 @@
   @media (min-width: $tablet) {
     font-style: normal;
     font-weight: normal;
-    font-size: 26px;
+    font-size: rem-calc(26);
     line-height: 30px;
     color: #444444;
     margin: 0 11px 0 0;
@@ -122,6 +123,15 @@
   color: #6E7781;
   font-weight: 400;
   margin: 0 14px 0 0;
+}
+
+@mixin extra-title {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+  color: #444444;
+  margin: 0 21px 0 0;
 }
 
 @mixin title-aside {
